examples/ok/arithmeticBasic.k
@Use("java")
public void main(){
    integer valueOne = 10;
    integer valueTwo = 3;

    integer responseSum = valueOne + valueTwo;
    integer responseSubtract = valueOne - valueTwo;
    integer responseMultiply = valueOne * valueTwo;
    integer responseDivide = valueOne / valueTwo;
    integer responseRemaider = valueOne % valueTwo;

    println(responseSum);
    println(responseSubtract);
    println(responseMultiply);
    println(responseDivide);
    println(responseRemaider);

    return;
}