examples/error/failVoidReturn.k
@Use("java")
public void main() {
    return 0; // Error: Void cannot return value except null
}